--- a/config/config.ini
+++ b/config/config.ini
@@ -1,9 +1,10 @@
-# this is config file,only store browser type and server URL
+#  this is config file, only store browser type and server URL
 
 [browserType]
-#browsername = Firefox
-browsername = Chrome
-#browsername = IE
+#browserName = Firefox
+browserName = Chrome
+#browserName = IE
 
 [testServer]
 URL = https://www.baidu.com
+#URL = www.google.com
